--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Projects</title>
+    <title>ibrahim sinekli | My Projects</title>
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -55,8 +56,8 @@
     </main>
 
     <footer>
-        <p1>İbrahim Sinekli</p1>
-        <p>&copy; 2025</p>
+        <p>İbrahim Sinekli</p>
+        <p1>&copy; 2025</p1>
     </footer>
 
     <script src="script.js"></script>
