--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css">
 </head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FHSD4745YL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FHSD4745YL');
+</script>
+    
 <body>
     <header>
         <button id="menuToggle">&#9776;</button>
