--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ibrahim sinekli | my projects</title>
+    <title>ibrahim sinekli | my journey</title>
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css">
 
@@ -22,7 +22,7 @@
 <body>
     <header>
         <button id="menuToggle">&#9776;</button>
-        <h1>My Projects</h1>
+        <h1>My Journey</h1>
         <p>“Little by little, one travels far.”</p>
     </header>
 
