--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li class="category" data-category="Microcontrollers">Microcontrollers</li>
         <li class="category" data-category="Network">Network</li>
         <li class="category" data-category="Control Systems">Control Systems</li>
+        <li class="category" data-category="Task Management">Task Management</li>
 
         <li class="divider"></li> <!-- İkinci boşluk -->
 
