--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <li class="category" data-category="Radar Scanning Algorithms">Radar Scanning Algorithms</li>
         <li class="category" data-category="Microcontrollers">Microcontrollers</li>
         <li class="category" data-category="Network">Network</li>
-        <li class="category" data-category="Control Systems">Control Systems</li>        
+        <li class="category" data-category="Control Systems">Control Systems</li>
+        <li class="category" data-category="Control Systems">Circuit Analysis</li>
 
         <li class="divider"></li> <!-- İkinci boşluk -->
 
