--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="category" data-category="Microcontrollers">Microcontrollers</li>
         <li class="category" data-category="Network">Network</li>
         <li class="category" data-category="Control Systems">Control Systems</li>
-        <li class="category" data-category="Control Systems">Circuit Analysis</li>
+        <li class="category" data-category="Circuit Analysis">Circuit Analysis</li>
 
         <li class="divider"></li> <!-- İkinci boşluk -->
 
