--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
         <li class="divider"></li> <!-- Boşluk oluşturmak için eklendi -->
 
-        <li class="category" data-category="Radar Scanning Algorithms">Radar Scanning Algorithms</li>
+        <li class="category" data-category="EW">EW</li>
         <li class="category" data-category="Microcontrollers">Microcontrollers</li>
         <li class="category" data-category="Network">Network</li>
         <li class="category" data-category="Control Systems">Control Systems</li>
         <li class="category" data-category="Circuit Analysis">Circuit Analysis</li>
-        <li class="category" data-category="Calculators">Calculators</li>
+        
 
         <li class="divider"></li> <!-- İkinci boşluk -->
 
