--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         <li class="divider"></li> <!-- Boşluk oluşturmak için eklendi -->
 
+        <li class="category" data-category="Simulators">Simulators</li>
         <li class="category" data-category="EW">EW</li>
         <li class="category" data-category="Microcontrollers">Microcontrollers</li>
         <li class="category" data-category="Network">Network</li>
@@ -57,7 +58,6 @@
 
     <footer>
         <p>İbrahim Sinekli</p>
-        <p1>&copy; 2025</p1>
     </footer>
 
     <script src="script.js"></script>
